--- a/app/views/urls/show.html.erb
+++ b/app/views/urls/show.html.erb
@@ -3,7 +3,7 @@
 	  <font face="century schoolbook" size="4">The following URL:<br><br>
 	  <span class="tab"><strong><%= @url.url %></strong></span><br><br>
 	  resulted in the following shortURL<br><br>
-	  <span class="tab"><strong>http://shorturl.com/<%= @url.key %></strong></span></font>
+	  <span class="tab"><strong>http://mybabyurl.herokuapp.com/<%= @url.key %></strong></span></font>
 	</p>
 
 	<%= link_to 'Back', urls_path %>
