--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <table width="100%" cellpadding="10" cellspacing="0" border="0">
 		<tr>
   	<td style="background-color : #A9D0F5; color : White; font-size : 14px;">
-  	<font face="century schoolbook" size="3" color="#000000"><h1 width="100%" cellpadding="10" style="color:white;" align="center" cellpadding="5" class="create-form" >Welcome to shortURL.com</h1></font>
+  	<font face="century schoolbook" size="3" color="#000000"><h1 width="100%" cellpadding="10" style="color:white;" align="center" cellpadding="5" class="create-form" >Welcome to MyBabyUrl.com</h1></font>
   		</td>
 		</tr>
   </table>
